# gen/http/openapi3.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.3
 info:
-    title: Goa API
+    title: Pack Optimizer
+    description: Service to calculate optimal pack combinations for a given number of items
     version: 0.0.1
 servers:
-    - url: http://localhost:80
-      description: Default server for optimizer
+    - url: http://localhost:8080
 paths:
     /packs/calculate:
         get:
@@ -13,115 +13,106 @@ paths:
             summary: calculate optimizer
             description: Calculate optimal pack combinations for a given number of items.
             operationId: optimizer#calculate
-            requestBody:
-                required: true
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/CalculateRequestBody'
-                        example:
-                            totalItems: 5521850667853442423
+            parameters:
+                - name: quantity
+                  in: query
+                  description: Total number of items to pack
+                  allowEmptyValue: true
+                  required: true
+                  schema:
+                    type: integer
+                    description: Total number of items to pack
+                    example: 500
+                    format: int64
+                    minimum: 1
+                  example: 500
             responses:
                 "200":
                     description: OK response.
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/CalculateOKResponseBody'
+                                $ref: '#/components/schemas/CalculateResponseBody'
                             example:
                                 packs:
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
+                                    - quantity: 5462019687617304141
+                                      size: 9022841764491673247
+                                    - quantity: 5462019687617304141
+                                      size: 9022841764491673247
+                                    - quantity: 5462019687617304141
+                                      size: 9022841764491673247
                 "400":
-                    description: Bad Request response.
+                    description: 'bad_request: Bad Request response.'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                $ref: '#/components/schemas/CalculateOKResponseBody'
-                            example:
-                                packs:
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
+                                $ref: '#/components/schemas/Error'
                 "500":
-                    description: Internal Server Error response.
+                    description: 'internal_server_error: Internal Server Error response.'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                $ref: '#/components/schemas/CalculateOKResponseBody'
-                            example:
-                                packs:
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
-                                    - quantity: 5272053870220535793
-                                      size: 4662976870903077339
+                                $ref: '#/components/schemas/Error'
     /packs/sizes:
         get:
             tags:
                 - optimizer
-            summary: getSizes optimizer
+            summary: getPackSizes optimizer
             description: Get the current pack sizes.
-            operationId: optimizer#getSizes
+            operationId: optimizer#getPackSizes
             responses:
                 "200":
                     description: OK response.
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/GetSizesOKResponseBody'
+                                $ref: '#/components/schemas/GetPackSizesResponseBody'
                             example:
                                 sizes:
-                                    - 474667457818666820
-                                    - 1591985036429251049
-                                    - 7406854048369655432
+                                    - 250
+                                    - 500
+                                    - 1000
                 "500":
-                    description: Internal Server Error response.
+                    description: 'internal_server_error: Internal Server Error response.'
                     content:
-                        application/json:
+                        application/vnd.goa.error:
                             schema:
-                                $ref: '#/components/schemas/GetSizesOKResponseBody'
-                            example:
-                                sizes:
-                                    - 3579251599982593480
-                                    - 2534687217927780163
-                                    - 6955969754630762196
-                                    - 3639531370154897817
+                                $ref: '#/components/schemas/Error'
         put:
             tags:
                 - optimizer
-            summary: updateSizes optimizer
+            summary: updatePackSizes optimizer
             description: Update the pack sizes.
-            operationId: optimizer#updateSizes
+            operationId: optimizer#updatePackSizes
             requestBody:
                 required: true
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/GetSizesOKResponseBody'
+                            $ref: '#/components/schemas/GetPackSizesResponseBody'
                         example:
                             sizes:
-                                - 5187262674716634592
-                                - 7976492007773777393
-                                - 8733443723489356396
+                                - 250
+                                - 500
+                                - 1000
             responses:
                 "204":
                     description: No Content response.
                 "400":
-                    description: Bad Request response.
+                    description: 'bad_request: Bad Request response.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
                 "500":
-                    description: Internal Server Error response.
+                    description: 'internal_server_error: Internal Server Error response.'
+                    content:
+                        application/vnd.goa.error:
+                            schema:
+                                $ref: '#/components/schemas/Error'
 components:
     schemas:
-        CalculateOKResponseBody:
+        CalculateResponseBody:
             type: object
             properties:
                 packs:
@@ -130,53 +121,82 @@ components:
                         $ref: '#/components/schemas/Pack'
                     description: Optimal pack combinations (pack size -> quantity)
                     example:
-                        - quantity: 5272053870220535793
-                          size: 4662976870903077339
-                        - quantity: 5272053870220535793
-                          size: 4662976870903077339
-                        - quantity: 5272053870220535793
-                          size: 4662976870903077339
-                        - quantity: 5272053870220535793
-                          size: 4662976870903077339
+                        - quantity: 5462019687617304141
+                          size: 9022841764491673247
+                        - quantity: 5462019687617304141
+                          size: 9022841764491673247
             example:
                 packs:
-                    - quantity: 5272053870220535793
-                      size: 4662976870903077339
-                    - quantity: 5272053870220535793
-                      size: 4662976870903077339
-                    - quantity: 5272053870220535793
-                      size: 4662976870903077339
+                    - quantity: 5462019687617304141
+                      size: 9022841764491673247
+                    - quantity: 5462019687617304141
+                      size: 9022841764491673247
+                    - quantity: 5462019687617304141
+                      size: 9022841764491673247
+                    - quantity: 5462019687617304141
+                      size: 9022841764491673247
             required:
                 - packs
-        CalculateRequestBody:
+        Error:
             type: object
             properties:
-                totalItems:
-                    type: integer
-                    description: Total number of items to pack
-                    example: 1552173628274183304
-                    format: int64
+                fault:
+                    type: boolean
+                    description: Is the error a server-side fault?
+                    example: true
+                id:
+                    type: string
+                    description: ID is a unique identifier for this particular occurrence of the problem.
+                    example: 123abc
+                message:
+                    type: string
+                    description: Message is a human-readable explanation specific to this occurrence of the problem.
+                    example: parameter 'p' must be an integer
+                name:
+                    type: string
+                    description: Name is the name of this class of errors.
+                    example: bad_request
+                temporary:
+                    type: boolean
+                    description: Is the error temporary?
+                    example: false
+                timeout:
+                    type: boolean
+                    description: Is the error a timeout?
+                    example: false
             example:
-                totalItems: 2993982965767742848
+                fault: true
+                id: 123abc
+                message: parameter 'p' must be an integer
+                name: bad_request
+                temporary: true
+                timeout: true
             required:
-                - totalItems
-        GetSizesOKResponseBody:
+                - name
+                - id
+                - message
+                - temporary
+                - timeout
+                - fault
+        GetPackSizesResponseBody:
             type: object
             properties:
                 sizes:
                     type: array
                     items:
                         type: integer
-                        example: 6192056192952589381
+                        example: 1252738748905056061
                         format: int64
                     description: Current pack sizes
                     example:
-                        - 8324425566147697766
-                        - 8342397683373211688
+                        - 250
+                        - 500
+                        - 1000
             example:
                 sizes:
-                    - 1357076879179761880
-                    - 1287891771697475621
+                    - 250
+                    - 500
+                    - 1000
             required:
                 - sizes
         Pack:
@@ -185,20 +205,20 @@ components:
                 quantity:
                     type: integer
                     description: Quantity of this pack size needed
-                    example: 1975249710174304874
+                    example: 5231780788838641072
                     format: int64
                 size:
                     type: integer
                     description: Size of the pack
-                    example: 9026701606775409556
+                    example: 1228837440079209148
                     format: int64
             description: Pack represents a pack size and the quantity needed.
             example:
-                quantity: 7119139271458250272
-                size: 8374315779069350159
+                quantity: 5378073684824219235
+                size: 2405996645203351898
             required:
                 - size
                 - quantity
 tags:
     - name: optimizer
-      description: The optimizer service calculates optimal pack combinations for a given number of items.
+      description: Service calculates optimal pack combinations for a given number of items.
